cambios de facturacion incial

--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -442,6 +442,8 @@
                                 <th>Status</th>
                                 <th>Lugar Reparación</th>
                                 <th>PIN</th>
+                                <th>Factura Revisión</th>
+
 
                                 <th width="150">Acción</th>
 
@@ -476,6 +478,14 @@
                                     }else
                                     {
                                         <td><span class="mr-2"><span class="badge-dot badge-danger"></span>Sin Validar</span></td>
+                                    }
+
+                                    @if(item.Factura.FirstOrDefault() == null)
+                                    {
+                                        <td><span class="mr-2"><span class="badge-dot badge-danger"></span>Sin Pagar</span></td>
+                                    }else
+                                    {
+                                        <td> <a asp-page="/Facturas/Observar" asp-route-id="@item.Factura.FirstOrDefault().id" title="Observar" class="btn btn-rounded btn-outline-primary" target="_blank"> @item.Factura.FirstOrDefault().ConsecutivoHacienda</a></td>
                                     }
                                     <td>
 
@@ -516,6 +526,8 @@
                                 <th>Status</th>
                                 <th>Lugar Reparación</th>
                                 <th>PIN</th>
+                                <th>Factura Revisión</th>  
+
                                 <th>Acción</th>
 
                             </tr>
