--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -530,7 +530,17 @@
 
                         <div># Serie: @Model.Llamada.SerieFabricante</div>
                         <div>Ubicación: @Model.UbicacionProd</div>
+                        <div>Factura Revisión:  
+                            @if (Model.Llamada.Factura.FirstOrDefault() != null)
+                            {
+                                <a asp-page="/Facturas/Observar" asp-route-id="@Model.Llamada.Factura.FirstOrDefault().id" title="Observar" target="_blank"> @Model.Llamada.Factura.FirstOrDefault().ConsecutivoHacienda</a>
 
+                            }else
+                            {
+                                <span style="color: red;">Sin Pagar</span>
+                            }
+
+                        </div>
 
                     </div>
                 </div>
