--- a/Sicsoft.Checkin.Web/Pages/EntregasFacturar/Facturar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/EntregasFacturar/Facturar.cshtml
@@ -523,7 +523,7 @@
 
 
                     if (ganancia < producto.PorMinimo) {
-                        bandera = false;
+                       // bandera = false;
                         Swal.fire({
                             icon: 'error',
                             title: 'Oops...',
