--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Facturar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Facturar.cshtml
@@ -802,7 +802,7 @@
                     Swal.fire({
                         icon: 'error',
                         title: 'Oops...',
-                        text: 'Parece que faltan datos por rellenar'
+                        text: 'Parece que faltan datos por rellenar o correo invalido'
 
                     })
                 }
