--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Editar Llamada Servicio";
 }
-@section breadcrumb{
+@section breadcrumb {
 
     <li class="breadcrumb-item">
         <a asp-page="./Index">Llamadas Servicios</a>
@@ -31,7 +31,7 @@
 @{
     var Roles = ((ClaimsIdentity)User.Identity).Claims.Where(d => d.Type == "Roles").Select(s1 => s1.Value).FirstOrDefault().Split("|");
 }
-@section styles{
+@section styles {
 
     <style>
 
@@ -317,59 +317,57 @@
     </style>
     <style>
 
-        
+
         .modal {
-    display: none; /* Ocultarlo por defecto */
-    position: fixed; /* Fijo en la pantalla */
-    z-index: 1000; /* Superposición sobre otros elementos */
-    left: 0;
-    top: 0;
-    width: 100%; /* Ocupa todo el ancho */
-    height: 100%; /* Ocupa todo el alto */
-    overflow: auto; /* Habilita scroll si el contenido es más grande que la ventana */
-    background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro con opacidad */
-}
+            display: none; /* Ocultarlo por defecto */
+            position: fixed; /* Fijo en la pantalla */
+            z-index: 1000; /* Superposición sobre otros elementos */
+            left: 0;
+            top: 0;
+            width: 100%; /* Ocupa todo el ancho */
+            height: 100%; /* Ocupa todo el alto */
+            overflow: auto; /* Habilita scroll si el contenido es más grande que la ventana */
+            background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro con opacidad */
+        }
 
-/* Estilo para la imagen dentro del modal */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px; /* Limita el tamaño de la imagen */
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.6); /* Sombra para la imagen */
-    animation-name: zoom;
-    animation-duration: 0.6s; /* Animación de zoom al aparecer */
-}
+        /* Estilo para la imagen dentro del modal */
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px; /* Limita el tamaño de la imagen */
+            border-radius: 10px; /* Bordes redondeados */
+            box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.6); /* Sombra para la imagen */
+            animation-name: zoom;
+            animation-duration: 0.6s; /* Animación de zoom al aparecer */
+        }
 
-/* Animación de zoom para la imagen */
- 
+        /* Animación de zoom para la imagen */
 
-/* Estilo para el botón de cerrar (X) */
-.close {
-    position: absolute;
-    top: 9%;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-    cursor: pointer;
-}
 
-/* Cambiar el color de la X al pasar el cursor */
-.close:hover,
-.close:focus {
-    color: #bbb;
-}
+        /* Estilo para el botón de cerrar (X) */
+        .close {
+            position: absolute;
+            top: 9%;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+            cursor: pointer;
+        }
 
- 
- 
-</style>
+            /* Cambiar el color de la X al pasar el cursor */
+            .close:hover,
+            .close:focus {
+                color: #bbb;
+            }
+
+    </style>
 
 }
 
-@section scripts{
+@section scripts {
     <script>
         // Get the modal
         var modal = document.getElementById('myModal');
@@ -389,7 +387,7 @@
             modalImg.src = $("#" + id + "-Adj").attr('src');
 
         }
-   
+
 
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
@@ -506,8 +504,7 @@
             }
         }
 
-        function onChangeStatusInicial()
-        {
+        function onChangeStatusInicial() {
             try {
                 var RolIdentificacion = "@(!string.IsNullOrEmpty(Roles.Where(a => a == "47").FirstOrDefault()))";
                 if (RolIdentificacion == "False") {
@@ -522,7 +519,7 @@
                     }
                 }
 
-              
+
 
             } catch (e) {
                 Swal.fire({
@@ -533,7 +530,25 @@
                 })
             }
         }
+        function Facturar(numero) {
+            try {
 
+
+                var url = window.location.href.toString();
+                url = url.split("/Llamadas")[0] + "/EntregasFacturar/Facturar/" + numero;
+                window.open(url, "_blank");
+
+
+
+            } catch (e) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Ha ocurrido un error al intentar guardar ' + e
+
+                })
+            }
+        }
         function onChangeStatus() {
             try {
                 var RolIdentificacion = "@(!string.IsNullOrEmpty(Roles.Where(a => a == "47").FirstOrDefault()))";
@@ -549,8 +564,7 @@
                     }
                 }
 
-                if($("#status").val() == -1)
-                {
+                if ($("#status").val() == -1) {
                     Swal.fire({
                         title: 'Introduce tu PIN',
                         input: 'password',
@@ -586,7 +600,7 @@
                                 },
                                 success: function (json) {
 
-                                    
+
                                     if (json.success == true) {
                                         $("#idPIN").val(result.value);
                                         Swal.fire({
@@ -603,31 +617,59 @@
                                         }).then((result) => {
                                             if (result.isConfirmed) {
 
-                                                
+
                                             }
                                         })
 
                                     } else {
-                                        Swal.fire({
-                                            icon: 'error',
-                                            title: 'Oops...',
-                                            text: 'Ha ocurrido un error al intentar guardar ' + json.mensaje
 
-                                        }).then((result) => {
-                                            if (result.isConfirmed) {
-                                                onChangeStatus();
-                                            } else {
-                                                
-                                                
+                                        if (json.facturar == true) {
+                                            $("#divProcesando").hide();
+
+                                            if ($('.modal-backdrop').is(':visible')) {
+
+                                                $('body').removeClass('modal-open');
+                                                $('.modal-backdrop').hide();
                                             }
-                                        });
-                                   
+                                            Facturar(json.numero);
+                                            Swal.fire({
+                                                icon: 'error',
+                                                title: 'Oops...',
+                                                text: json.mensaje
+
+                                            }).then((result) => {
+                                                if (result.isConfirmed) {
+                                                    onChangeStatus();
+                                                } else {
+
+
+                                                }
+                                            });
+                                           
+                                        } else {
+                                            Swal.fire({
+                                                icon: 'error',
+                                                title: 'Oops...',
+                                                text: 'Ha ocurrido un error al intentar guardar ' + json.mensaje
+
+                                            }).then((result) => {
+                                                if (result.isConfirmed) {
+                                                    onChangeStatus();
+                                                } else {
+
+
+                                                }
+                                            });
+                                        }
+
+
+
                                     }
                                 },
 
                                 beforeSend: function (xhr) {
 
-                               
+
                                 },
                                 complete: function () {
 
@@ -636,10 +678,10 @@
                                     Swal.fire({
                                         icon: 'error',
                                         title: 'Oops...',
-                                        text:   error.mensaje
+                                        text: error.mensaje
 
                                     })
-                                    
+
 
                                 }
                             });
@@ -676,7 +718,7 @@
                 }
             }
 
-     
+
             //else if (recibido1.Status == -1) {
             //    if (recibido1.AdjuntosIdentificacion == [] || recibido1.AdjuntosIdentificacion.length == 0) {
             //        return false;
@@ -771,7 +813,7 @@
                     }).then((result) => {
                         if (result.isConfirmed) {
                             var recibidos = recibido1;
-                             var jsonString = JSON.stringify(recibido1);
+                            var jsonString = JSON.stringify(recibido1);
                             // Comprimir la cadena JSON utilizando gzip
                             var compressedData = pako.gzip(jsonString);
 
@@ -819,12 +861,31 @@
                                         })
 
                                     } else {
-                                        Swal.fire({
-                                            icon: 'error',
-                                            title: 'Oops...',
-                                            text: 'Ha ocurrido un error al intentar guardar ' + json.mensaje
+                                        if (json.facturar == true) {
+                                            $("#divProcesando").hide();
 
-                                        })
+                                            if ($('.modal-backdrop').is(':visible')) {
+
+                                                $('body').removeClass('modal-open');
+                                                $('.modal-backdrop').hide();
+                                            }
+                                            Swal.fire({
+                                                icon: 'error',
+                                                title: 'Oops...',
+                                                text: json.mensaje
+
+                                            });
+                                            Facturar(json.numero);
+                                        } else {
+                                            Swal.fire({
+                                                icon: 'error',
+                                                title: 'Oops...',
+                                                text: 'Ha ocurrido un error al intentar guardar ' + json.mensaje
+
+                                            })
+                                        }
+
+                                       
                                     }
                                 },
 
@@ -1275,7 +1336,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label>Tipo de Caso:</label>
-                                <select id="tp" class="form-control" asp-for="Input.TipoCaso" required> 
+                                <select id="tp" class="form-control" asp-for="Input.TipoCaso" required>
                                     @foreach (var item in Model.TP)
                                     {
                                         <option value="@item.idSAP">@item.Nombre</option>
@@ -1349,7 +1410,7 @@
                             <div class="form-group">
                                 <label>Técnico:</label>
                                 <select id="tecnico" class="form-control" asp-for="Input.Tecnico" required>
-                                  @*   <option value="0">Seleccione</option> *@
+                                    @*   <option value="0">Seleccione</option> *@
                                     @foreach (var item in Model.Tecnicos)
                                     {
                                         <option value="@item.idSAP">@item.Nombre</option>
@@ -1399,7 +1460,7 @@
 
                                     </select>
                                 }
-                                
+
                             </div>
                         </div>
                     </div>
@@ -1441,7 +1502,7 @@
 
                                 </div>
                             </div>
-                            @using System.Globalization;
+                        @using System.Globalization;
                             @{
                                 NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
                                 formato.CurrencyGroupSeparator = ",";
@@ -1507,7 +1568,7 @@
                         @{
                             var i = 0;
                         }
-                        <div  style=" overflow-y:scroll;    z-index: 5; height: 500px;">
+                        <div style=" overflow-y:scroll;    z-index: 5; height: 500px;">
                             <div class="panel-group" id="accordion">
                                 @foreach (var item in Model.HistoricoDetallado.Historico.OrderBy(a => a.Fecha).GroupBy(a => a.Boleta))
                                 {
@@ -1576,7 +1637,7 @@
                                                                         @foreach (var item2 in item3)
                                                                         {
                                                                             <tr>
-                                                                                <td align="right">@item2.Garantia.ToString("N",formato)</td>
+                                                                                <td align="right">@item2.Garantia.ToString("N", formato)</td>
 
 
 
@@ -1592,7 +1653,7 @@
                                                                         @foreach (var item2 in item3)
                                                                         {
                                                                             <tr>
-                                                                                <td align="right">@item2.Facturado.ToString("N",formato)</td>
+                                                                                <td align="right">@item2.Facturado.ToString("N", formato)</td>
 
 
 
@@ -1605,8 +1666,8 @@
                                                             </tr>
                                                             <tr>
                                                                 <td colspan="4" align="center"><b>Total Boleta</b></td>
-                                                                <td align="right">@item3.Sum(a => a.Garantia).ToString("N",formato)</td>
-                                                                <td align="right">@item3.Sum(a => a.Facturado).ToString("N",formato)</td>
+                                                                <td align="right">@item3.Sum(a => a.Garantia).ToString("N", formato)</td>
+                                                                <td align="right">@item3.Sum(a => a.Facturado).ToString("N", formato)</td>
 
                                                             </tr>
                                                         </tbody>
@@ -1644,8 +1705,8 @@
                                             <tbody>
                                                 <tr>
                                                     <td colspan="4" style="text-align: center;"><b>Gran Total</b></td>
-                                                    <td style="text-align: right;">@Model.HistoricoDetallado.Historico.Sum(a => a.Garantia).ToString("N",formato)</td>
-                                                    <td style="text-align: right;">@Model.HistoricoDetallado.Historico.Sum(a => a.Facturado).ToString("N",formato)</td>
+                                                    <td style="text-align: right;">@Model.HistoricoDetallado.Historico.Sum(a => a.Garantia).ToString("N", formato)</td>
+                                                    <td style="text-align: right;">@Model.HistoricoDetallado.Historico.Sum(a => a.Facturado).ToString("N", formato)</td>
 
                                                 </tr>
                                             </tbody>
@@ -1782,7 +1843,7 @@
                         <div id="container-input">
                             <div class="wrap-file">
                                 <div class="content-icon-camera">
-                                    <input type="file" id="file" name="file[]" accept="image/*" multiple   />
+                                    <input type="file" id="file" name="file[]" accept="image/*" multiple />
                                     <div class="icon-camera"></div>
                                 </div>
                                 <div id="preview-images">
@@ -1890,7 +1951,7 @@
                                     <th>ID</th>
                                     <th>Usuario</th>
                                     <th>Detalle</th>
-                                    <th>Fecha Creación</th> 
+                                    <th>Fecha Creación</th>
 
 
 
@@ -1903,14 +1964,14 @@
                                         <td>@item.id</td>
 
                                         <td>@item.Usuario </td>
-                                        <td>@item.Accion </td> 
+                                        <td>@item.Accion </td>
 
                                         <td>
 
                                             @item.Fecha
                                         </td>
-                                        
-                                        
+
+
                                     </tr>
                                 }
 
@@ -1948,5 +2009,5 @@
 
     <span class="close">×</span>
     <img class="modal-content" id="img01">
- 
+
 </div>
